tests/paczka1/fuzzy1/50452263.err
Error in line 4: WobVokx6ti S915 27,1
Error in line 5: WobVokx6ti A922 74,3
Error in line 7: Nm1ABaG S519 53,9
Error in line 16: WobVokx6ti S915 89,2
Error in line 18: WobVokx6ti A922 42,6
Error in line 23: mhRXm S754 64,64
Error in line 25: mhRXm S754 137,8
